Consume Maven 4 dispatched test paths in modular split
When the dispatch provider is available, resolveModulePathSplit uses
the class-path/module-path separation decided by Maven 4 core instead
of the plugin-side plexus-java resolution; the project's own build
outputs are added around it and the reverse-closure/opens machinery is
seeded with the modules already dispatched to the module path. Under
Maven 4 this supersedes the hand-rolled forward move of #3395.

Verified: 3345/3393/3090 ITs green under Maven 4.0.x-SNAPSHOT with the
typed delegate dispatching; ModulePathWhiteboxIT green under
3.10.0-rc-1 (fallback unchanged); unit suite 857/857.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>